# tee_fusion_repo_v2

./: .gitignore  CMakeLists.txt  Makefile  README-INSTALL.md  README.md
adapters/: adapter_iface.h
adapters/keystone/: adapter_init.c
adapters/optee/: adapter_init.c  optee_fusion_ta.h  optee_fusion_ta_uuid.h
adapters/tdx/: adapter_init.c
core/api/: crypto_ex.c  fusion_api.c
core/evidence/: mapping.c  uevidence_builder.c
core/util/: cbor_min.c  cbor_min.h  cose_min.c
docs/: OPTEE_QEMU_V8.md
examples/ratls/: client.c  server.c
examples/selftest/: selftest_crypto.c
include/: tee_fusion.h  tee_fusion_err.h  tee_fusion_ex.h  tee_fusion_version.h  tee_sapi.h
optee/ta/: .optee_fusion_ta.o.cmd  .optee_fusion_ta.o.d  .ta.ld.d  .user_ta_header.o.cmd  .user_ta_header.o.d  7a9b3b24-3e2f-4d5f-912d-8b7c1355629a.dmp  7a9b3b24-3e2f-4d5f-912d-8b7c1355629a.elf  7a9b3b24-3e2f-4d5f-912d-8b7c1355629a.map  7a9b3b24-3e2f-4d5f-912d-8b7c1355629a.stripped.elf  Makefile  optee_fusion_ta.c  optee_fusion_ta.h  sub.mk  user_ta_header_defines.h
optee/ta/backend/: .optee_sapi.o.cmd  .optee_sapi.o.d  optee_sapi.c  tee_sapi.c
scripts/: aarch64-toolchain.cmake  build_ta.sh  build_tc_aarch64.sh  build_tc_aarch64.sh.bak  env-optee-qemu.sh  gencert.sh  hard_fix_arm64_ta.sh  install_deps_ubuntu.sh  push_artifacts.sh  run_qemu.sh  run_qemu_front.sh  setup_optee_env.sh  setup_optee_qemu_v8.sh
tests/: CMakeLists.txt  tests_cbor.c
